--- a/SolarCRM/appsettings.json
+++ b/SolarCRM/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=aspnet-SolarCRM-75F3A0A7-D98F-45D1-A7A2-0E0BAAF7ACF3;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "DefaultConnection": "Server=DESKTOP-PPL5CRC\\SQLEXPRESS;Database=SolarCRM;Trusted_Connection=True;MultipleActiveResultSets=true"
   },
   "Logging": {
     "LogLevel": {
